Добавил кнопку Create при выборе слов для новоо набора

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="tvPopupNewSetName">Set name</string>
     <string name="etPopUpNewSet">New set</string>
     <string name="btnPopUpOk">OK</string>
-    <string name="btnPopUpCancel">Cancel</string>
+    <string name="btnNewSetCreate">Create</string>
 </resources>
