Добавил заглушки для нажатий в табе всех слов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="etPopUpNewSet">New set</string>
     <string name="btnPopUpOk">OK</string>
     <string name="btnNewSetCreate">Create</string>
+    <string name="tvPopupEditWord">Edit</string>
 </resources>
