--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Dictionary</string>
     <string name="tab_text_1_favorites">FAVORITES</string>
-    <string name="tab_text_2_recent">RECENT</string>
+    <string name="tab_text_2_recent">TRAINING</string>
     <string name="tab_text_3_all">ALL</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
