Добавил на таб тренировки кнопку "Training"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="tvDoYouKnow">Do you know the meaning off?</string>
     <string name="btnYes">Yes</string>
     <string name="btnNo">No</string>
+    <string name="btnTraining">Training</string>
 </resources>
