Added text selection activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="tvPopUpTraining">Select multiple sets</string>
     <string name="tvChoose">Choose the correct answer</string>
     <string name="btnStop">Stop</string>
+    <string name="process_text_action_name">TestActivity</string>
 </resources>
