--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="btnPopUpOk">OK</string>
     <string name="btnNewSetCreate">Create</string>
     <string name="tvPopupEditWord">Edit</string>
-    <string name="tvDoYouKnow">Do you know the meaning off?</string>
+    <string name="tvDoYouKnow">Can you remember this word?</string>
     <string name="btnYes">Yes</string>
     <string name="btnNo">No</string>
     <string name="btnTraining">Training</string>
