Рефакторинг, обновил форму добавления слов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,14 @@
     <string name="tvPopUpTraining">Select multiple sets</string>
     <string name="tvChoose">Choose the correct answer</string>
     <string name="btnStop">Stop</string>
-    <string name="process_text_action_name">TestActivity</string>
+    <string name="process_text_action_name">Remember in MyD</string>
     <string name="interestFact0">Did you know, that The Komodo dragon, found in Indonesia, is the largest lizard in the world, growing up to 3 meters (9.8 feet) in length.</string>
     <string name="interestingFactName">Did you know?</string>
+    <string name="success_add">Success!</string>
+    <string name="translation">Translation</string>
+    <string name="add_word">Add word</string>
+    <string name="word">Word</string>
+    <string name="translation">Translation</string>
+    <string name="word">Word</string>
+    <string name="add_new_word">Add new word</string>
 </resources>
